src/agus_maps_flutter.h

// Structured place page payload for native consumers.
typedef struct {
	const char* mwm_name;
	int64_t mwm_version;
	int64_t index;
} AgusPlacePageFeatureId;
typedef struct {
	const char* decimal;
	const char* dms;
	const char* osm;
	const char* olc;
	const char* utm;
	const char* mgrs;
} AgusPlacePageCoordinates;
typedef struct {
	int64_t key;
	const char* value;
} AgusPlacePageIntMetadataEntry;
typedef struct {
	const char* key;
	const char* value;
} AgusPlacePageStringMetadataEntry;
typedef struct {
	AgusPlacePageFeatureId feature_id;
	int32_t object_type;
	int32_t opening_mode;
	const char* title;
	const char* secondary_title;
	const char* subtitle;
	const char* address;
	double lat;
	double lon;
	const char* wiki_description_html;
	int32_t road_type;
	int32_t is_route_point;
	AgusPlacePageCoordinates coordinates;
	const char** raw_types;
	int32_t raw_types_count;
	AgusPlacePageIntMetadataEntry* metadata;
	int32_t metadata_count;
	AgusPlacePageStringMetadataEntry* metadata_tags;
	int32_t metadata_tags_count;
	int32_t has_bookmark_id;
	int64_t bookmark_id;
	int32_t has_bookmark_category_id;
	int64_t bookmark_category_id;
	int32_t has_track_id;
	int64_t track_id;
} AgusPlacePageData;
// Deregister a map file by path
FFI_PLUGIN_EXPORT int comaps_deregister_map(const char* fullPath);
// Get the count of registered maps
FFI_PLUGIN_EXPORT int comaps_get_registered_maps_count(void);
FFI_PLUGIN_EXPORT int64_t agus_native_create_surface(int32_t width, int32_t height, float density);
FFI_PLUGIN_EXPORT void agus_native_create_surface(int32_t width, int32_t height, float density);
// Called when the surface size changes
FFI_PLUGIN_EXPORT void agus_native_on_size_changed(int32_t width, int32_t height);
// Called when the display scale (DPI) changes at runtime
FFI_PLUGIN_EXPORT void agus_native_set_visual_scale(float density);
// Called when the surface is destroyed
FFI_PLUGIN_EXPORT void agus_native_on_surface_destroyed(void);
// Get the D3D11 shared texture handle for Flutter (Windows only)
// Returns HANDLE that can be used to open the shared texture
FFI_PLUGIN_EXPORT void* agus_get_shared_texture_handle(void);
// Get the D3D11 device pointer (Windows only)
FFI_PLUGIN_EXPORT void* agus_get_d3d11_device(void);
// Get the D3D11 texture pointer (Windows only)
FFI_PLUGIN_EXPORT void* agus_get_d3d11_texture(void);
// Render a single frame (triggers frame ready callback)
FFI_PLUGIN_EXPORT void agus_render_frame(void);
// Set the frame ready callback
typedef void (*FrameReadyCallback)(void);
FFI_PLUGIN_EXPORT void agus_set_frame_ready_callback(FrameReadyCallback callback);