lib/agus_maps_flutter_bindings_generated.dart


  late final _comaps_deregister_mapPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'comaps_deregister_map');
  late final _comaps_deregister_map = _comaps_deregister_mapPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Get the count of registered maps
  int comaps_get_registered_maps_count() {
    return _comaps_get_registered_maps_count();
  }

  late final _comaps_get_registered_maps_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'comaps_get_registered_maps_count');
  late final _comaps_get_registered_maps_count =
      _comaps_get_registered_maps_countPtr.asFunction<int Function()>();

  void agus_native_create_surface(
    int width,
    int height,
    double density,
  ) {
    return _agus_native_create_surface(
      width,
      height,
      density,
    );
  }

  late final _agus_native_create_surfacePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Int32, ffi.Int32, ffi.Float)>>(
      'agus_native_create_surface');
  late final _agus_native_create_surface = _agus_native_create_surfacePtr
      .asFunction<void Function(int, int, double)>();

  /// Called when the surface size changes
  void agus_native_on_size_changed(
    int width,
    int height,
  ) {
    return _agus_native_on_size_changed(
      width,
      height,
    );
  }

  late final _agus_native_on_size_changedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32, ffi.Int32)>>(
          'agus_native_on_size_changed');
  late final _agus_native_on_size_changed =
      _agus_native_on_size_changedPtr.asFunction<void Function(int, int)>();

  /// Called when the display scale (DPI) changes at runtime
  void agus_native_set_visual_scale(
    double density,
  ) {
    return _agus_native_set_visual_scale(
      density,
    );
  }

  late final _agus_native_set_visual_scalePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'agus_native_set_visual_scale');
  late final _agus_native_set_visual_scale =
      _agus_native_set_visual_scalePtr.asFunction<void Function(double)>();

  /// Called when the surface is destroyed
  void agus_native_on_surface_destroyed() {
    return _agus_native_on_surface_destroyed();
  }

  late final _agus_native_on_surface_destroyedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'agus_native_on_surface_destroyed');
  late final _agus_native_on_surface_destroyed =
      _agus_native_on_surface_destroyedPtr.asFunction<void Function()>();

  /// Get the D3D11 shared texture handle for Flutter (Windows only)
  /// Returns HANDLE that can be used to open the shared texture
  ffi.Pointer<ffi.Void> agus_get_shared_texture_handle() {
    return _agus_get_shared_texture_handle();
  }

  late final _agus_get_shared_texture_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'agus_get_shared_texture_handle');
  late final _agus_get_shared_texture_handle =
      _agus_get_shared_texture_handlePtr
          .asFunction<ffi.Pointer<ffi.Void> Function()>();

  /// Get the D3D11 device pointer (Windows only)
  ffi.Pointer<ffi.Void> agus_get_d3d11_device() {
    return _agus_get_d3d11_device();
  }

  late final _agus_get_d3d11_devicePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'agus_get_d3d11_device');
  late final _agus_get_d3d11_device =
      _agus_get_d3d11_devicePtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  /// Get the D3D11 texture pointer (Windows only)
  ffi.Pointer<ffi.Void> agus_get_d3d11_texture() {
    return _agus_get_d3d11_texture();
  }

  late final _agus_get_d3d11_texturePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'agus_get_d3d11_texture');
  late final _agus_get_d3d11_texture =
      _agus_get_d3d11_texturePtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  /// Render a single frame (triggers frame ready callback)
  void agus_render_frame() {
    return _agus_render_frame();
  }

  late final _agus_render_framePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('agus_render_frame');
  late final _agus_render_frame =
      _agus_render_framePtr.asFunction<void Function()>();

  void agus_set_frame_ready_callback(
    FrameReadyCallback callback,
  ) {
    return _agus_set_frame_ready_callback(
      callback,
    );
  }

  late final _agus_set_frame_ready_callbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FrameReadyCallback)>>(
          'agus_set_frame_ready_callback');
  late final _agus_set_frame_ready_callback = _agus_set_frame_ready_callbackPtr
      .asFunction<void Function(FrameReadyCallback)>();
}

/// Structured place page payload for native consumers.
final class AgusPlacePageFeatureId extends ffi.Struct {
  external ffi.Pointer<ffi.Char> mwm_name;

  @ffi.Int64()
  external int mwm_version;

  @ffi.Int64()
  external int index;
}

final class AgusPlacePageCoordinates extends ffi.Struct {
  external ffi.Pointer<ffi.Char> decimal;

  external ffi.Pointer<ffi.Char> dms;

  external ffi.Pointer<ffi.Char> osm;

  external ffi.Pointer<ffi.Char> olc;

  external ffi.Pointer<ffi.Char> utm;

  external ffi.Pointer<ffi.Char> mgrs;
}

final class AgusPlacePageIntMetadataEntry extends ffi.Struct {
  @ffi.Int64()
  external int key;

  external ffi.Pointer<ffi.Char> value;
}

final class AgusPlacePageStringMetadataEntry extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  external ffi.Pointer<ffi.Char> value;
}

final class AgusPlacePageData extends ffi.Struct {
  external AgusPlacePageFeatureId feature_id;

  @ffi.Int32()
  external int object_type;

  @ffi.Int32()
  external int opening_mode;

  external ffi.Pointer<ffi.Char> title;

  external ffi.Pointer<ffi.Char> secondary_title;

  external ffi.Pointer<ffi.Char> subtitle;

  external ffi.Pointer<ffi.Char> address;

  @ffi.Double()
  external double lat;

  @ffi.Double()
  external double lon;

  external ffi.Pointer<ffi.Char> wiki_description_html;

  @ffi.Int32()
  external int road_type;

  @ffi.Int32()
  external int is_route_point;

  external AgusPlacePageCoordinates coordinates;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> raw_types;

  @ffi.Int32()
  external int raw_types_count;

  external ffi.Pointer<AgusPlacePageIntMetadataEntry> metadata;

  @ffi.Int32()
  external int metadata_count;

  external ffi.Pointer<AgusPlacePageStringMetadataEntry> metadata_tags;

  @ffi.Int32()
  external int metadata_tags_count;

  @ffi.Int32()
  external int has_bookmark_id;

  @ffi.Int64()
  external int bookmark_id;

  @ffi.Int32()
  external int has_bookmark_category_id;

  @ffi.Int64()
  external int bookmark_category_id;

  @ffi.Int32()
  external int has_track_id;

  @ffi.Int64()
  external int track_id;
}

typedef FrameReadyCallbackFunction = ffi.Void Function();
typedef DartFrameReadyCallbackFunction = void Function();

/// Set the frame ready callback
typedef FrameReadyCallback
    = ffi.Pointer<ffi.NativeFunction<FrameReadyCallbackFunction>>;
